Добавил отображение модального окна с сообщением об успехе при успешной отправке заявки. Добавил стиль модального окна "success" в файл стилей.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -27,6 +27,16 @@
     --bs-modal-footer-border-color: var(--bs-danger-border-subtle);
 }
 
+/* Переопределение цветов стандартного модального окна под стиль "alert-success" */
+
+.modal-overriden-success {
+    --bs-modal-bg: var(--bs-success-bg-subtle);
+    --bs-modal-color: var(--bs-success-text-emphasis);
+    --bs-modal-border-color: var(--bs-success-border-subtle);
+    --bs-modal-header-border-color: var(--bs-success-border-subtle);
+    --bs-modal-footer-border-color: var(--bs-success-border-subtle);
+}
+
 /* Информационные блоки страницы входа для событий "выход" и "ошибка" */
 
 .login-logout {
