--- a/src/main/resources/templates/hospital-registration.html
+++ b/src/main/resources/templates/hospital-registration.html
@@ -78,9 +78,9 @@
                 </div>
             </div>
         </div>
-        <!-- Модальное окно с сообщением об успехе-->
-        <div class="modal fade" id="success-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-overriden-success mx-auto">
+        <!-- Модальное окно с сообщением об успехе -->
+        <div class="modal fade col-12" id="success-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-overriden-success">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-4" id="success-modal-title">Успех</h1>
