--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,44 +9,61 @@
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+        <!-- Основная часть страницы -->
         <div class="container my-5">
-            <div class="row text-center mb-3">
-                <h1 class="text-secondary fs-2">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</h1>
-            </div>
-            <div class="row mb-5">
-                <div class="text-secondary fs-5">
-                    <p>
-                        В целом, конечно, постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации глубокомысленных рассуждений. Но стремящиеся вытеснить традиционное производство, нанотехнологии
-                        неоднозначны и будут заблокированы в рамках своих собственных рациональных ограничений.
-                    </p>
-                    <p>
-                        Наше дело не так однозначно, как может показаться: базовый вектор развития говорит о возможностях инновационных методов управления процессами. Сложно сказать, почему независимые государства представляют собой не что иное, как
-                        квинтэссенцию победы маркетинга над разумом и должны быть заблокированы в рамках своих собственных рациональных ограничений.
-                    </p>
-                    <p>
-                        Имеется спорная точка зрения, гласящая примерно следующее: некоторые особенности внутренней политики призывают нас к новым свершениям, которые, в свою очередь, должны быть преданы социально-демократической анафеме. Прежде всего,
-                        начало повседневной работы по формированию позиции требует от нас анализа поставленных обществом задач.
-                    </p>
-                    <p>
-                        <!-- todo: change mx-3 -->
-                        <a href="" class="text-secondary fs-4">Войти</a>
-                        <a href="" class="text-secondary mx-3 fs-4">Зарегистрироваться</a>
-                        <a href="" class="text-secondary fs-4">Подать заявку</a>
-                    </p>
+            <!-- Заголовок -->
+            <div class="row text-center mb-2">
+                <div class="col-12">
+                    <h1 class="text-secondary fs-2">Приложение для мониторинга состояния здоровья пациентов с ЛАГ</h1>
                 </div>
             </div>
+            <!-- Описание -->
+            <div class="row mb-5">
+                <div class="col-12">
+                    <div class="text-secondary fs-5">
+                        <p>
+                            В целом, конечно, постоянный количественный рост и сфера нашей активности влечет за собой процесс внедрения и модернизации глубокомысленных рассуждений. Но стремящиеся вытеснить традиционное производство, нанотехнологии
+                            неоднозначны и будут заблокированы в рамках своих собственных рациональных ограничений.
+                        </p>
+                        <p>
+                            Наше дело не так однозначно, как может показаться: базовый вектор развития говорит о возможностях инновационных методов управления процессами. Сложно сказать, почему независимые государства представляют собой не что иное, как
+                            квинтэссенцию победы маркетинга над разумом и должны быть заблокированы в рамках своих собственных рациональных ограничений.
+                        </p>
+                        <p>
+                            Имеется спорная точка зрения, гласящая примерно следующее: некоторые особенности внутренней политики призывают нас к новым свершениям, которые, в свою очередь, должны быть преданы социально-демократической анафеме. Прежде
+                            всего, начало повседневной работы по формированию позиции требует от нас анализа поставленных обществом задач.
+                        </p>
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
+                            <a href="#" class="btn btn-primary m-2">Войти</a>
+                            <a href="#" class="btn btn-success m-2">Зарегистрироваться</a>
+                            <a href="#" class="btn btn-warning m-2">Подать заявку</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Заголовок контактов главного администратора -->
             <div class="row mb-3">
                 <h2 class="text-secondary text-center fs-2">Контакты главного администратора</h2>
             </div>
-            <div id="contactsDiv" class="row">
-                <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'" th:id="${each.id}">
-                    <h4 th:id="'description' + ${each.id}" class="text-secondary" th:text="${each.description}">ВКонтакте</h4>
-                    <p th:id="'contact' + ${each.id}" class="text-dark break-all mb-2" th:text="${each.contact}">bttps://some/very/very/very/very/very/long/link</p>
-                    <hr th:if="${!status.last}" />
+            <!-- Список контактов главного администратора -->
+            <div class="row">
+                <div class="col-12">
+                    <div th:each="each, status : ${contacts}" class="text-start" th:classappend="${!status.last} ? 'mb-2'">
+                        <h4 class="text-secondary" th:text="${each.description}">ВКонтакте</h4>
+                        <p class="text-dark break-all mb-2" th:text="${each.contact}">bttps://some/very/very/very/very/very/long/link</p>
+                        <hr th:if="${!status.last}" />
+                    </div>
+                </div>
+            </div>
+            <!-- Сообщение об отсутствии контактов -->
+            <div class="row" th:if="${contacts.empty}" id="empty-contacts-message">
+                <div class="col-12">
+                    <div class="text-secondary text-center fst-italic fs-4">К сожалению, список контактов главного администратора пока пуст</div>
                 </div>
             </div>
         </div>
-        <script src="../static/js/test.js" th:src="@{/js/test.js}"></script>
+        <!-- Скрипты -->
+        <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
