--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="modal-body fs-4">
                         <div class="mb-2 mt-1" id="code-input-error">
-                            <div class="text-center fs-4 login-error rounded h-100">
+                            <div class="text-center fs-4 danger-block rounded h-100">
                                 <p class="mb-1 my-auto">Неверный код</p>
                             </div>
                         </div>
