--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
         <div class="container">
             <div th:if="${param.logout}" class="row mb-5">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
@@ -35,11 +35,15 @@
                         <label for="password" class="form-label text-secondary fs-5">Пароль</label>
                         <input type="password" name="password" id="password" class="form-control mb-4" />
                         <hr />
-                        <button type="submit" class="text-center btn btn-lg btn-primary">Войти</button>
+                        <button type="submit" class="text-center btn btn-lg btn-primary mt-1">Войти</button>
                     </form>
                 </div>
             </div>
+            <div class="row text-center mt-4">
+                <div class="col-12 col-md-9 col-lg-6 mx-auto">
+                    <a href="#" th:href="@{/}" class="text-secondary fs-4">Вернуться на главную</a>
+                </div>
+            </div>
         </div>
-        <script src="../static/js/test.js" th:src="@{/js/test.js}"></script>
     </body>
 </html>
