--- a/src/main/resources/templates/registration/admin-registration.html
+++ b/src/main/resources/templates/registration/admin-registration.html
@@ -100,43 +100,9 @@
             </div>
         </div>
         <!-- Модальное окно с сообщением об ошибке -->
-        <div class="modal fade" id="error-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-overriden-danger">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-4" id="error-modal-title">Ошибка</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body fs-5" id="error-modal-text">Здесь располагается короткое описание ошибки. Пример: "Минимальная длина почты - 8 символов, максимальная - 256 символов"</div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:replace="~{/fragments/modal/modal-error :: modal-error}"></div>
         <!-- Модальное окно с сообщением об успехе -->
-        <div class="modal fade" id="success-modal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-overriden-success">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-4" id="success-modal-title">Успех</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body fs-5" id="success-modal-text">
-                        Заявка на регистрацию медицинского учреждения
-                        <span id="success-modal-text-hospital-name" class="fw-bold">Заполняется js-кодом</span>
-                        успешно отправлена.
-                        <br /><br />
-                        Если ваша личность будет подтверждена, главный администратор приложения сгенерирует код, который придёт на почту
-                        <span id="success-modal-text-email" class="fw-bold">Заполняется js-кодом</span>. <br /><br />
-                        Ожидайте.
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:replace="~{/fragments/modal/modal-success :: modal-success}"></div>
         <!-- Скрипты -->
         <script src="../../static/js/registration/registration-administrator.js" th:src="@{/js/registration/registration-administrator.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
