Сверстал страницу списка больниц для главного администратора.

--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -5,12 +5,43 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Медицинские учреждения</title>
-        <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-        <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column justify-content-center bg-main">
-        <script src="../static/js/test2.js" th:src="@{/js/test2.js}"></script>
-        <script src="../static/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+        <!-- Основная часть страницы -->
+        <div class="container text-secondary">
+            <div th:each="each : ${hospitals}" class="d-flex position-relative row mb-3">
+                <div class="col-12">
+                    <div class="border rounded p-2">
+                        <div class="text-center mb-2 m-1">
+                            <h2 class="fs-4 mb-2">Национальный медицинский исследовательский центр имени В. А. Алмазова</h2>
+                            <div th:switch="${each.currentState}">
+                                <p th:case="'WAITING_CODE'" class="text-danger fs-5">Ожидает выдачу кода</p>
+                                <p th:case="'WAITING_REGISTRATION'" class="text-warning fs-5">Ожидает регистрации администратора</p>
+                                <p th:case="'REGISTERED'" class="text-success fs-5">Зарегистрировано</p>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row flex-wrap align-items-center justify-content-center justify-content-md-between">
+                            <h3 class="fs-4 mb-1 m-1">OID: 1.232.345.7665.123.5</h3>
+                            <div th:switch="${each.currentState}">
+                                <p th:case="'WAITING_CODE'" class="fs-5 mb-1 m-1">
+                                    <a href="#" th:href="@{/hospitals/__${each.id}__/request}" class="stretched-link text-decoration-none text-danger">Дата подачи заявки: 25-12-2019 19:11:43</a>
+                                </p>
+                                <p th:case="'WAITING_REGISTRATION'" class="fs-5 mb-1 m-1">
+                                    <a href="#" th:href="@{/hospitals/__${each.id}__/request}" class="stretched-link text-decoration-none text-warning">Дата подачи заявки: 25-12-2019 19:11:43</a>
+                                </p>
+                                <p th:case="'REGISTERED'" class="text-success fs-5 mb-1 m-1">
+                                    <a href="#" th:href="@{/hospitals/__${each.id}__}" class="stretched-link text-decoration-none text-success">Дата регистрации 25-12-2019 19:11:43</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Скрипты -->
+        <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
     </body>
 </html>
